[package]
name = "ferris-gc"
version = "0.1.5"
authors = ["redradist, redradist@gmail.com"]
description = "Flexible implementation of garbage collector for Rust"
repository = "https://github.com/redradist/ferris-gc"
readme = "../README.md"
license = "Apache-2.0/MIT"
keywords = ["garbage", "memory"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["no_std"]
proc-macro = ["ferris-gc-proc-macro"]
no_std = ["lazy_static/spin_no_std", "hashbrown"]

[dependencies]
lazy_static = "1.4.0"
hashbrown = { version = "0.11.2", optional = true }
ferris-gc-proc-macro = { path = "../ferris_gc_proc_macro", version = "0.1.2", optional = true }

[dev-dependencies]
ferris-gc-proc-macro = { path = "../ferris_gc_proc_macro", version = "0.1.2" }